--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       </div>
       <!-- === Fancy results === -->
       <div class="search-result col-md-8 mx-auto py-4" id="fancy-result"></div>
-      <button onclick="nextSongArray()">Next</button>
+      <button id="nextSongs">Next</button>
       <!-- Fancy Single Lyrics -->
       <div class="container fancy-result-container">
         <div class="single-lyrics text-center">
